# wave-conferencing-bridge

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECRETS.md  capabilities.json  package-lock.json  package.json  threat-model.md  tsconfig.json
.github/workflows/: _checks.yml  foundation-gate.yml  governance-enforce.yml  typecheck.yml
docs/: egress-linux.md  egress-macos.md  egress-windows.md  ingress-zoom-meeting-sdk.md
native/: ADAPTATION.md  CMakeLists.txt  Dockerfile  HOST-REQUIREMENTS.md  config.toml.example
native/include/: ipc.hpp  wave_video_source.hpp
native/src/: ipc.cpp  main.cpp  wave_video_source.cpp
src/: index.ts
src/egress/: index.ts
src/ingress/: gateway-whip-publisher.test.ts  gateway-whip-publisher.ts  index.ts  meeting-sdk-jwt.test.ts  meeting-sdk-jwt.ts  meeting-sdk-launch.test.ts  meeting-sdk-launch.ts  meeting-sdk-process-driver.test.ts  meeting-sdk-process-driver.ts  meeting-sdk.test.ts  meeting-sdk.ts
src/types/: egress.ts  index.ts  ingress.ts  meeting-sdk-launch.ts  meeting-sdk.ts
